[package]
name = "fkget"
version = "0.6.0"
edition = "2018"
authors = ["Anish Nath <anish2good@yahoo.co.in>"]
description = "A simple file downloader written in Rust"
repository = "https://github.com/anishnath/fkget"
license = "MIT"

[dependencies]
reqwest = { version = "0.11", features = ["blocking"] }
tokio = { version = "1.16.1", features = ["full"] }
url = "2.2.2"
rusoto_s3 = "0.48.0"
rusoto_core = "0.48.0"
colored = "2.0.0"